add pages Dashboard, Profiles, Connection, Settings

--- a/fasttool_modern/ConnectionPage.xaml
+++ b/fasttool_modern/ConnectionPage.xaml
@@ -9,8 +9,12 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid>
-        <TextBlock Text="Connection" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="48" />
+    <Grid ColumnSpacing="10" ColumnDefinitions=" *, Auto" RowDefinitions="Auto, Auto" HorizontalAlignment="Center" Margin="0,100,0,0">
+        <TextBlock Text="Choose port" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24" Grid.Column="0" Grid.Row="0" Margin="0,0,0,10"/>
+        <ComboBox Width="200" Grid.Column="0" Grid.Row="1">
+            
+        </ComboBox>
+        <Button Content="Connect" Grid.Column="1" Grid.Row="1"></Button>
 
     </Grid>
 </Page>
