--- a/fasttool_modern/DashboardPage.xaml
+++ b/fasttool_modern/DashboardPage.xaml
@@ -9,7 +9,8 @@
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" Margin="0,100,0,0">
+    <Grid>
+    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,100,0,0">
         <Grid ColumnDefinitions="Auto, *, Auto" RowDefinitions ="Auto" Margin="0,0,0,10">
             <TextBlock Grid.Column="0"  Text="Screen Profile" HorizontalAlignment="Left" FontSize="24"></TextBlock>
             <ComboBox Grid.Column="2" PlaceholderText="Home" Width="200">
@@ -52,6 +53,10 @@
         
 
     </StackPanel>
+    <InfoBar x:Name="InfoBar" IsOpen="False" Message="Your Devive is not connected" Severity="Informational" VerticalAlignment="Bottom" />
+    </Grid>
+    
+
 
 
 </Page>
