--- a/fasttool_modern/ProfilesPage.xaml
+++ b/fasttool_modern/ProfilesPage.xaml
@@ -11,18 +11,22 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" MinHeight="640">
         <TextBlock Text="Manage profiles" FontSize="18" Margin="0,0,0,10"></TextBlock>
-        <Grid ColumnSpacing="10" ColumnDefinitions=" *, Auto">
-            <TextBlock Grid.Column="0" Text="Home"></TextBlock>
-            <Button Grid.Column="1" Content="Remove"></Button>
-        </Grid>
         
+        
+
+        <Grid Name="listProfiles" ColumnSpacing="10" RowSpacing="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+        </Grid>
 
         <Grid ColumnSpacing="10" ColumnDefinitions=" *, Auto" RowDefinitions="Auto, Auto"  Margin="0,200,0,0">
             <TextBlock Text="Add screen profile" FontSize="18" Grid.Column="0" Grid.Row="0" Margin="0,0,0,10"></TextBlock>
-            <ComboBox Grid.Column="0" Grid.Row="1" Width="200">
+            <ComboBox x:Name="ComboBoxProfiles" Grid.Column="0" Grid.Row="1" Width="200">
                 <x:String>chrome</x:String>
             </ComboBox>
-            <Button Grid.Column="1" Grid.Row="1">
+            <Button Grid.Column="1" Grid.Row="1" Click="addProfile">
                 <FontIcon Glyph="&#xE710;" />
             </Button>
         </Grid>
