--- a/fasttool_modern/DashboardPage.xaml
+++ b/fasttool_modern/DashboardPage.xaml
@@ -32,7 +32,7 @@
 
         <Grid MinWidth="640" Height="Auto" ColumnDefinitions="Auto, *, Auto" Margin="0,32,0,0">
             <TextBlock x:Name="activeText" Text="Button 1" Grid.Row="0" Grid.Column="0" FontSize="22"></TextBlock>
-            <Button Grid.Row="0" Grid.Column="2" Click="image_Click">
+            <Button x:Name="imgButton"  Grid.Row="0" Grid.Column="2" Click="image_Click">
                 <FontIcon Glyph="&#xEE71;" FontSize="22"/>
             </Button>
         </Grid>
