--- a/src/fasttool_modern/Pages/DashboardPage.xaml
+++ b/src/fasttool_modern/Pages/DashboardPage.xaml
@@ -20,19 +20,19 @@
         </Grid>
 
         <Grid Width="Auto" Height="Auto" HorizontalAlignment="Center" ColumnDefinitions="Auto, Auto, Auto, Auto" RowDefinitions ="Auto, Auto">
-            <Button x:Name="bt1" Click="activebutton_Click" Tag="1" Margin="10" Width="160" Height="160" Grid.Column="0" Grid.Row="0"></Button>
-                <Button x:Name="bt2" Tag="2" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="1" Grid.Row="0"></Button>
-                <Button x:Name="bt3" Tag="3" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="2" Grid.Row="0"></Button>
-                <Button x:Name="bt4" Tag="4" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="0"></Button>
-                <Button x:Name="bt5" Tag="5" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="0" Grid.Row="1"></Button>
-                <Button x:Name="bt6" Tag="6" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="1" Grid.Row="1"></Button>
-                <Button x:Name="bt7" Tag="7" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="2" Grid.Row="1"></Button>
-                <Button x:Name="bt8" Tag="8" Click="activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="1"></Button>
+            <Button x:Name="bt1" Click="Activebutton_Click" Tag="1" Margin="10" Width="160" Height="160" Grid.Column="0" Grid.Row="0"></Button>
+                <Button x:Name="bt2" Tag="2" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="1" Grid.Row="0"></Button>
+                <Button x:Name="bt3" Tag="3" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="2" Grid.Row="0"></Button>
+                <Button x:Name="bt4" Tag="4" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="0"></Button>
+                <Button x:Name="bt5" Tag="5" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="0" Grid.Row="1"></Button>
+                <Button x:Name="bt6" Tag="6" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="1" Grid.Row="1"></Button>
+                <Button x:Name="bt7" Tag="7" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="2" Grid.Row="1"></Button>
+                <Button x:Name="bt8" Tag="8" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="1"></Button>
         </Grid>
 
         <Grid MinWidth="640" Height="Auto" ColumnDefinitions="Auto, *, Auto" Margin="0,32,0,0">
             <TextBlock x:Name="activeText" Text="Button 1" Grid.Row="0" Grid.Column="0" FontSize="22"></TextBlock>
-            <Button x:Name="imgButton"  Grid.Row="0" Grid.Column="2" Click="image_Click">
+            <Button x:Name="imgButton"  Grid.Row="0" Grid.Column="2" Click="Image_Click">
                 <FontIcon Glyph="&#xEE71;" FontSize="22"/>
             </Button>
         </Grid>
