--- a/src/fasttool_modern/Pages/DashboardPage.xaml
+++ b/src/fasttool_modern/Pages/DashboardPage.xaml
@@ -13,7 +13,7 @@
     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,20,0,0">
         <Grid ColumnDefinitions="Auto, *, Auto" RowDefinitions ="Auto" Margin="0,0,0,10">
             <TextBlock Grid.Column="0"  Text="Screen Profile" HorizontalAlignment="Left" FontSize="24"></TextBlock>
-                <ComboBox x:Name="ComboBoxProfiles" Grid.Column="2"  Width="200">
+                <ComboBox x:Name="ComboBoxProfiles" SelectionChanged="ComboBoxProfiles_SelectionChanged" Grid.Column="2"  Width="200">
                     
                     
                 </ComboBox>
@@ -27,7 +27,7 @@
                 <Button x:Name="bt5" Tag="5" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="0" Grid.Row="1"></Button>
                 <Button x:Name="bt6" Tag="6" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="1" Grid.Row="1"></Button>
                 <Button x:Name="bt7" Tag="7" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="2" Grid.Row="1"></Button>
-                <Button x:Name="bt8" Tag="8" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="1"></Button>
+                <Button x:Name="bt8" Tag="8" IsEnabled="False" Click="Activebutton_Click" Margin="10" Width="160" Height="160" Grid.Column="3" Grid.Row="1"></Button>
         </Grid>
 
         <Grid MinWidth="640" Height="Auto" ColumnDefinitions="Auto, *, Auto" Margin="0,32,0,0">
